feat: ai сұрақ генерациясын тұрақтандыру